-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.0
-
None
-
a0006c79f (dev), 4d4f4a8be (6.10), 059b8d5bb (6.9)
The following are missing versions, and this is not a complete list:
- relates to
-
QTBUG-112701 Issues with bindable property documentation
-
- Reported
-
For Gerrit Dashboard: QTBUG-112692 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
657598,2 | Doc: Add missing \since tags for QPropertyNotifier and QProperty APIs | dev | qt/qtbase | Status: MERGED | +2 | 0 |
658712,2 | Doc: Add missing \since tags for QPropertyNotifier and QProperty APIs | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
658884,2 | Doc: Add missing \since tags for QPropertyNotifier and QProperty APIs | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |