Doc: Add missing \since tags for QPropertyNotifier and QProperty APIs

Added the missing \since documentation tags to several QProperty
related APIs and the QPropertyNotifier class.

Fixes: QTBUG-112692
Change-Id: I5ce904fd160a62680af76b1b065595c17474afc1
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit a0006c79fc9c0fcda53b7ebbcbe0eba831af1603)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 4d4f4a8be7be6bafaea122499e69dfe5b0d9998d)